syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/vexsx/Simple-Bank/pb";

message RenewAccessTokenRequest {
  string RefreshToken = 1;
}

message RenewAccessTokenResponse {
  string AccessToken = 1;
  google.protobuf.Timestamp AccessTokenExpiresAt = 2;
}